--- a/src/presentation/components/common/Header/Header.css
+++ b/src/presentation/components/common/Header/Header.css
@@ -1,3 +1,59 @@
-.header{
-    padding: 29px 54px;
+.header {
+    position: relative;
+    height: 100px;
+}
+
+#header-right {
+    /* position: absolute; */
+    /* margin: auto; */
+    padding-left: 25%;
+    display: inline-block;
+}
+
+#header-icon {
+    display: inline-block;
+    padding-left: 20%;
+
+    .icon {
+        width: 28px;
+        padding-left: 45px;
+        /* height: 28px; */
+    }
+}
+
+ul li:not(:last-child) {
+    display: inline-block;
+    padding-right: 75px;
+}
+
+#logo {
+    margin: 30px 0px 30px 54px;
+    display: inline-block;
+}
+
+#logo .name {
+    display: inline-block;
+    color: #000;
+    font-family: Montserrat;
+    font-size: 34px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+#log .image {
+    display: inline-block;
+    width: 50px;
+    height: 32px;
+}
+
+.item {
+    display: inline-block;
+    color: #000;
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    position: absolute;
+    text-decoration: none;
 }
