ECO-Footer fix margin

--- a/src/presentation/components/Home/Home.css
+++ b/src/presentation/components/Home/Home.css
@@ -15,9 +15,9 @@
     background-color: #F4F5F7;
 }
 
-.product-item:hover {
+/* .product-item:hover {
     background-color: #898989;
-}
+} */
 
 .product-list {
     text-align: center;
