--- a/src/presentation/components/ProductCard/ProductCard.css
+++ b/src/presentation/components/ProductCard/ProductCard.css
@@ -39,7 +39,7 @@
 .product-text-status {
     color: var(--color-white, #FFF);
     font-family: Poppins;
-    font-size: 16px;    
+    font-size: 16px;
     font-style: normal;
     font-weight: 500;
     line-height: 150%;
@@ -71,3 +71,15 @@
     padding: 16px 16px 30px 16px;
 }
 
+.product-hover {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: none;
+    display: none;
+}
+
+.product-hover:hover {
+    background-color: #898989;
+    /* visibility: hidden; */
+}
