--- a/src/presentation/components/ProductCard/ProductCard.css
+++ b/src/presentation/components/ProductCard/ProductCard.css
@@ -71,15 +71,65 @@
     padding: 16px 16px 30px 16px;
 }
 
-.product-hover {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: none;
-    display: none;
+#product-item {
+    position: relative;
+
 }
 
-.product-hover:hover {
-    background-color: #898989;
-    /* visibility: hidden; */
+#product-item:hover+#product-hover {
+    display: block;
 }
+
+#product-hover {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    align-content: center;
+    background-color: rgba(58, 58, 58, .7);
+
+    display: block;
+    /* align-self: center; */
+    justify-content: center;
+    /* opacity: unset; */
+    /* background: var(--color-gray-1, #3A3A3A); */
+
+
+
+
+}
+
+#product-hover .add-text {
+    color: var(--primary, #B88E2F);
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 150%;
+}
+
+#product-hover .product-add {
+    display: flex;
+    background-color: var(--color-white, #FFF);
+    justify-content: center;
+    padding: 12px 52px;
+}
+
+#product-hover .product-action {
+    display: flex;
+    justify-content: space-around;
+}
+
+#product-hover .action-option {
+    color: var(--color-white, #FFF);
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 150%;
+}
+
+/* #product-hover:hover { */
+/* display: block; */
+/* visibility: hidden; */
+/* } */
