--- a/src/presentation/components/common/Header/Header.css
+++ b/src/presentation/components/common/Header/Header.css
@@ -1,4 +1,4 @@
-.header {
+#header {
     position: relative;
     height: 100px;
 }
@@ -21,7 +21,7 @@
     }
 }
 
-ul li:not(:last-child) {
+#header ul li:not(:last-child) {
     display: inline-block;
     padding-right: 75px;
 }
@@ -41,7 +41,7 @@ ul li:not(:last-child) {
     line-height: normal;
 }
 
-#log .image {
+#logo    .image {
     display: inline-block;
     width: 50px;
     height: 32px;
