--- a/src/presentation/components/common/Header/Header.css
+++ b/src/presentation/components/common/Header/Header.css
@@ -1,34 +1,48 @@
 #header {
-    position: relative;
+    display: flex;
     height: 100px;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
 }
 
 #header-right {
-    /* position: absolute; */
-    /* margin: auto; */
-    padding-left: 25%;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+#header-right .item {
     display: inline-block;
+    padding-right: 75px;
+    color: #000;
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    /* position: absolute; */
+    text-decoration: none;
 }
 
 #header-icon {
-    display: inline-block;
-    padding-left: 20%;
-
-    .icon {
-        width: 28px;
-        padding-left: 45px;
-        /* height: 28px; */
-    }
+    margin-right: 5%;
+    max-width: 443px;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
-#header ul li:not(:last-child) {
-    display: inline-block;
-    padding-right: 75px;
+#header-icon .icon {
+    /* width: 28px; */
+    /* padding-right: 75px; */
+    padding-left: 45px;
+    height: 28px;
 }
+
 
 #logo {
     margin: 30px 0px 30px 54px;
-    display: inline-block;
+    /* display: inline-block; */
 }
 
 #logo .name {
@@ -41,19 +55,9 @@
     line-height: normal;
 }
 
-#logo    .image {
+#logo .image {
     display: inline-block;
     width: 50px;
     height: 32px;
 }
 
-.item {
-    display: inline-block;
-    color: #000;
-    font-family: Poppins;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    position: absolute;
-    text-decoration: none;
-}
