--- a/src/presentation/components/ProductCard/ProductCard.css
+++ b/src/presentation/components/ProductCard/ProductCard.css
@@ -83,14 +83,18 @@
 #product-hover {
     position: absolute;
     top: 0;
+    margin: auto;
     width: 100%;
     height: 100%;
-    align-content: center;
+    /* align-content: center; */
     background-color: rgba(58, 58, 58, .7);
+    display: flex;
+    flex-flow: wrap column;
 
-    display: block;
+    /* display: block; */
     /* align-self: center; */
     justify-content: center;
+    align-items: stretch;
     /* opacity: unset; */
     /* background: var(--color-gray-1, #3A3A3A); */
 
@@ -109,10 +113,11 @@
 }
 
 #product-hover .product-add {
-    display: flex;
     background-color: var(--color-white, #FFF);
-    justify-content: center;
     padding: 12px 52px;
+    align-self: center;
+    width: fit-content;
+    margin-bottom: 24px;
 }
 
 #product-hover .product-action {
