--- a/src/presentation/components/common/Footer/Footer.css
+++ b/src/presentation/components/common/Footer/Footer.css
@@ -24,12 +24,15 @@ footer {
 }
 
 .footer-detail {
-    flex-basis: 33.33%;
+    flex: 2;
 }
 
-.link {
-    display: inline;
-    flex-basis: 66.66%;
+.field{
+    flex: 1;
+}
+
+.email-field{
+    
 }
 
 .address {
@@ -61,7 +64,8 @@ footer {
 
 .email-container {
     margin-top: 55px;
-    display: block;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .option {
@@ -97,9 +101,4 @@ footer {
     background-color: #fff;
     border: none;
     border-bottom: 1px solid #000;
-}
-
-ul li {
-    display: inline-block;
-    vertical-align: top
 }
