--- a/src/presentation/components/ProductCard/ProductCard.css
+++ b/src/presentation/components/ProductCard/ProductCard.css
@@ -2,6 +2,7 @@
     position: static;
     width: 285px;
     height: 301px;
+    object-fit: cover;
     flex-shrink: 0;
     background: lightgray 50% / cover no-repeat;
 }
@@ -73,16 +74,19 @@
 
 #product-item {
     position: relative;
-
+    overflow: hidden;
 }
 
-#product-item:hover+#product-hover {
-    display: block;
+
+#product-item:hover #product-hover {
+    top: 0;
+    bottom: auto;
 }
 
 #product-hover {
     position: absolute;
-    top: 0;
+    /* top: 0; */
+    top: auto;
     margin: auto;
     width: 100%;
     height: 100%;
@@ -95,6 +99,8 @@
     /* align-self: center; */
     justify-content: center;
     align-items: stretch;
+    bottom: 100%;
+    transform: 2s;
     /* opacity: unset; */
     /* background: var(--color-gray-1, #3A3A3A); */
 
@@ -123,6 +129,7 @@
 #product-hover .product-action {
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 
 #product-hover .action-option {
@@ -131,7 +138,13 @@
     font-size: 16px;
     font-style: normal;
     font-weight: 600;
+    align-self: center;
     line-height: 150%;
+}
+
+.product-action-option{
+    display: flex;
+    align-items: center;
 }
 
 /* #product-hover:hover { */
