--- a/src/presentation/components/ProductCard/ProductCard.css
+++ b/src/presentation/components/ProductCard/ProductCard.css
@@ -123,6 +123,7 @@
     padding: 12px 52px;
     align-self: center;
     width: fit-content;
+    text-decoration: none;
     margin-bottom: 24px;
 }
 
