--- a/src/presentation/components/Product/Product.css
+++ b/src/presentation/components/Product/Product.css
@@ -34,121 +34,79 @@
     margin-right: 14px;
 }
 
-#product-component {
+#product-info {
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-around;
-    padding: 35px 100px;
-}
-
-#product-image {
-    display: flex;
-    flex: 1;
-}
-
-#product-information {
-    display: flex;
-    flex: 1;
     flex-flow: wrap column;
-    padding-left: 50px;
+    padding-bottom: 66px;
+    justify-content: flex-start;
+    align-items: center;
+    padding-top: 48px;
+    border-top: 1px solid #D9D9D9;
 }
 
-#product-image .main-image {
-    border-radius: 10px;
-    background-color: #F9F1E7;
-    overflow: hidden;
-    height: 500px;
-    width: 500px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    object-fit: contain;
-}
-
-#product-image .sub-image {
-    flex-flow: column;
-    display: flex;
-    margin-right: 32px;
-}
-
-#product-image .image {
-    width: 76px;
-    flex-shrink: 0;
-    height: 80px;
-    background-color: #D9D9D9;
-    border-radius: 10px;
-    object-fit: scale-down;
-    overflow: hidden;
-}
-
-#product-image .image:not(:last-child) {
-    margin-bottom: 32px;
-}
-
-#product-information .product-title {
-    color: #000;
-    display: block;
-    font-family: Poppins;
-    font-size: 42px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-}
-
-#product-information .product-describe {
-    color: #000;
-    font-family: Poppins;
-    font-size: 13px;
-    font-style: normal;
-    font-weight: 400;
-    width: 424px;
-    line-height: normal;
-    padding-bottom: 22px;
-}
-
-#product-information .product-stat {
+#product-info .product-info-header {
     display: flex;
     flex-flow: wrap row;
-    align-items: center;
-    padding-bottom: 10px;
-}
+    justify-content: space-between;
 
-#product-information .product-reivews {
-    height: 30px;
-    text-align: center;
-    margin-left: 18px;
-    border-left: 1px solid #9F9F9F;
-    padding-left: 22px;
-    display: flex;
-    align-items: center;
-}
-#product-information .product-reviews {
     color: #9F9F9F;
-    font-family: Poppins;
-    font-size: 13px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-}
-
-#product-information .product-price {
-    color: #9F9F9F;
-    display: block;
     font-family: Poppins;
     font-size: 24px;
     font-style: normal;
-    font-weight: 500;
-    padding-bottom: 10px;
+    font-weight: 400;
     line-height: normal;
+
+    padding-bottom: 37px;
 }
 
-#product-information .product-optional {}
+#product-info .product-info-header-button:not(:last-child) {
+    margin-right: 52px;
+}
 
-#product-information .product-decided {}
+#product-info .product-info-params {
+    color: #9F9F9F;
+    text-align: justify;
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    padding: 0px 207px;
+    margin-bottom: 30px;
+}
 
-#product-information .product-article {}
+#product-info .product-info-images {
+    border-radius: 10px;
+    align-items: center;
+    align-content: space-around;
+    display: flex;
+    flex-flow: wrap row;
+    justify-content: space-around;
+}
 
-#product-information .product-information-stat-star :not(:last-child){
-    padding-right: 6px;
+#product-info .image {
+    flex: 1;
+    border-radius: 10px;
+    background-color: #F9F1E7;
+    height: 348px;
+    object-fit: contain;
+}
+
+#product-info .image:not(:last-child) {
+    margin-right: 30px;
+}
+
+#product-related {
+    padding-top: 55px;
+    border-top: 1px solid #D9D9D9;
+}
+
+#product-related .product-related-header {
+    text-align: center;
+    color: #000;
+    font-family: Poppins;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 }
