ECO-Checkout add ui

--- a/src/presentation/components/ProductCard/index.html
+++ b/src/presentation/components/ProductCard/index.html
@@ -53,6 +53,7 @@
 
 <body>
     <div id="container">
+        <input type="text">
         <div id="product-hover">
             <button className="product-add">
                 <div className="product-text">
