--- a/src/presentation/components/ShopFilter/ShopFilter.css
+++ b/src/presentation/components/ShopFilter/ShopFilter.css
@@ -33,6 +33,14 @@
     background: #FFF;
 }
 
+#shop-filter .dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* #shop-filter .dropdown:hover { */
+    /* background: #f1f1f1; */
+/* } */
+
 #shop-filter .filter-right {
     display: inline-flex;
     align-items: center;
@@ -41,4 +49,24 @@
 #shop-filter .filter-left {
     display: inline-flex;
     align-items: center;
+}
+
+.filter-right .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.filter-right .dropdown-item {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.filter-right .dropdown-item:hover {
+    background-color: #f1f1f1
 }
