--- a/src/presentation/components/ProductCard/index.html
+++ b/src/presentation/components/ProductCard/index.html
@@ -3,48 +3,7 @@
 
 <head>
     <style>
-        #product-hover {
-            position: absolute;
-            top: 0;
-            width: 100%;
-            height: 100%;
-
-            background-color: rgba(58, 58, 58, .7);
-
-            display: block;
-            /* align-self: center; */
-            justify-content: center;
-            /* opacity: unset; */
-            /* background: var(--color-gray-1, #3A3A3A); */
-
-
-
-        }
-
-        #product-hover .product-text {
-            color: var(--primary, #B88E2F);
-            font-family: Poppins;
-            font-size: 16px;
-            font-style: normal;
-            font-weight: 600;
-            line-height: 150%;
-        }
-
-        ;
-
-        #product-hover .product-add {
-            display: block;
-            justify-content: center;
-            padding: 12px 52px;
-        }
-
-
-        #container {
-            position: absolute;
-            width: 100px;
-            height: 100px;
-            display: block;
-        }
+       
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -52,15 +11,11 @@
 </head>
 
 <body>
-    <div id="container">
-        <input type="text">
-        <div id="product-hover">
-            <button className="product-add">
-                <div className="product-text">
-                    Add to cart
-                </div>
-            </button>
-        </div>
+    <div className="product-detail">
+        <div className="product-name">{name}</div>
+        <span className="product-description">{description}</span>
+        <div className="product-price">{currency} {price} {(basePrice !== price) && <span
+                className="product-base-price">{currency} {basePrice}</span>}</div>
     </div>
 </body>
 
