--- a/src/presentation/components/ProductComponent/ProductComponent.css
+++ b/src/presentation/components/ProductComponent/ProductComponent.css
@@ -1,4 +1,3 @@
-
 #product-component {
     display: flex;
     flex-direction: row;
@@ -166,15 +165,21 @@
     border: 1px solid #000;
     justify-content: center;
     padding: 0px 48px;
+    text-decoration: none;
 
     color: #000;
     font-family: Poppins;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
+    background: #FFF;
     line-height: normal;
 
     margin-left: 10px;
+}
+
+#product-information .product-decided-butotn:hover {
+    background: #F9F1E7;
 }
 
 #product-information .product-quantity-controller {
@@ -194,14 +199,26 @@
 #product-information .product-quantity-negative {
     padding: 20px 0px 20px 15px;
     display: inline;
-
+    background: none;
+    border: none;
+    padding: none;
 }
 
 #product-information .product-quantity-plus {
     padding: 20px 15px 20px 0px;
     display: inline;
-
+    background: none;
+    border: none;
+    padding: none;
 }
+
+/* #product-information .product-quantity-negative:hover {
+    background: #F9F1E7;
+}
+
+#product-information .product-quantity-plus:hover {
+    background: #F9F1E7;
+} */
 
 #product-information .product-quantity-text {
     padding: 0px 35px;
@@ -228,7 +245,7 @@
     text-align: start;
 }
 
-#product-information tr{
+#product-information tr {
     padding-bottom: 12px;
 }
 
@@ -254,6 +271,6 @@
     /* justify-content: space-evenly; */
 }
 
-#product-information .product-article-tdata-contact :not(:last-child){
+#product-information .product-article-tdata-contact :not(:last-child) {
     margin-right: 23px;
 }
