--- a/src/presentation/components/Checkout/Checkout.css
+++ b/src/presentation/components/Checkout/Checkout.css
@@ -151,6 +151,10 @@
     margin-left: auto;
 }
 
+.billing-information .submit-button:hover {
+    background: #D9D9D9;
+}
+
 /* .select-payment input[type="radio"]{
     padding-bottom: 11px;
 } */
