--- a/src/presentation/components/ProductCard/ProductCard.css
+++ b/src/presentation/components/ProductCard/ProductCard.css
@@ -174,6 +174,7 @@
 .product-action-option {
     display: flex;
     align-items: center;
+    text-decoration: none !important;
 }
 
 /* #product-hover:hover { */
